@@ -10,16 +10,12 @@ import java.util.List;
 @Mapper(config = dev.zeann3th.stresspilot.infrastructure.configs.MapstructProtoConfig.class)
 public interface EnvironmentProtoMapper {
 
-    // ─── Entity → Proto ───────────────────────────────────────────────────────
-
     EnvironmentVariableResponse toProto(EnvironmentVariableEntity entity);
-
-    // ─── Request → Command ────────────────────────────────────────────────────
 
     default UpdateEnvironmentVariablesCommand toUpdateCommand(UpdateEnvironmentVariablesRequest request) {
         List<UpdateEnvironmentVariablesCommand.Update> updated = request.getVariablesList().stream()
                 .map(e -> new UpdateEnvironmentVariablesCommand.Update(null, e.getKey(), e.getValue(), false))
-                .collect(java.util.stream.Collectors.toList());
+                .toList();
 
         return UpdateEnvironmentVariablesCommand.builder()
                 .updated(updated)
@@ -27,8 +23,6 @@ public interface EnvironmentProtoMapper {
                 .added(java.util.List.of())
                 .build();
     }
-
-    // ─── List ─────────────────────────────────────────────────────────────────
 
     default ListEnvironmentVariablesResponse toListProto(List<EnvironmentVariableEntity> entities) {
         return ListEnvironmentVariablesResponse.newBuilder()
